// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing custom naming action for kungfu style and techniques should create a KUNGFU_CUSTOM_NAME_FOR_STYLE action for a valid style 1`] = `
Object {
  "payload": Object {
    "kungfuType": "KUNGFU_EXTERNAL",
    "name": "new name",
    "uid": "Blossom Harvest",
  },
  "type": "kungfu/CUSTOM_NAME_FOR_STYLE",
}
`;

exports[`Testing custom naming action for kungfu style and techniques should create a KUNGFU_CUSTOM_NAME_FOR_TECHNIQUE action for a valid style 1`] = `
Object {
  "payload": Object {
    "kungfuType": "KUNGFU_EXTERNAL",
    "name": "new name",
    "styleUid": "Blossom Harvest",
    "uid": "Heart-Fire Temper Skill",
  },
  "type": "kungfu/CUSTOM_NAME_FOR_TECHNIQUE",
}
`;

exports[`Testing external kungfu action creator should create an OPEN_STYLE action with an external kungfu 1`] = `
Object {
  "payload": Object {
    "cost": Object {
      "canPay": true,
      "destiny": 0,
      "original": 0,
    },
    "kungfuType": "KUNGFU_EXTERNAL",
    "uid": "Blossom Harvest",
  },
  "type": "kungfu/OPEN_STYLE",
}
`;

exports[`Testing external kungfu action creator should create an OPEN_STYLE action with an internal kungfu 1`] = `
Object {
  "payload": Object {
    "cost": Object {
      "canPay": true,
      "destiny": 0,
      "original": 0,
    },
    "kungfuType": "KUNGFU_INTERNAL",
    "uid": "Boundless Prosperity Manual",
  },
  "type": "kungfu/OPEN_STYLE",
}
`;
